# lab4_oop_var13

./: CMakeLists.txt  README.md  main.cpp
include/: array.h  array_of_figures.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
tests/: test_main.cpp
